--- a/src/Mob.css
+++ b/src/Mob.css
@@ -35,27 +35,32 @@
         margin-top: 5%;
     }
 
-    .main3 {
-        position: absolute;
-        top: 0;
-        margin-top: 20%;
-        margin-left: 2%;
+    
+    .man1{
+        background-color: rgb(245,249,252);
+        display: block !important;
+    }
+    .main1{
+        width: 60%;
+        height: 250px;
+        margin-left: 20%;
     }
 
     .main4 {
-        font-size: 18px;
+        font-size: 35px !important;
         font-family: Young Serif;
+      line-height: 3;
     }
 
     .main5 {
-        font-size: 20px;
+        font-size: 35px !important;
         font-family: Young Serif;
-        margin-top: -8%;
+        margin-top: -15%;
     }
 
     .main6 {
-        margin-top: -5%;
-        font-size: 11px
+        margin-top: -3%;
+        font-size: 17px
     }
 
 
@@ -66,7 +71,7 @@
         width: 50%;
         height: 23px;
         margin-left: 23%;
-        font-size: 13px;
+        font-size: 14px;
     }
 
     .main11 {
@@ -135,19 +140,16 @@
     .ic1 {
         margin-left: 31%;
         color: rgb(30, 73, 120);
-
     }
 
     .ic2 {
         margin-left: 55%;
         color: rgb(30, 73, 120);
-
     }
 
     .ic3 {
         margin-left: 64%;
         color: rgb(30, 73, 120);
-
     }
 
     .foot15 {
@@ -157,27 +159,30 @@
         margin-left: 37%;
     }
 
-    .foot16 {
+    .foot16 {   
         font-family: Jost;
         font-size: 16px;
         text-decoration: none;
         margin-left: 44%;
 
     }
-    .foot18{
-        font-family: Jost; 
+
+
+    .foot18 {
+        font-family: Jost;
         color: white;
-        background-color: rgb(30,73,120);
+        background-color: rgb(30, 73, 120);
         font-size: 15px;
         height: 27px;
     }
 
-    .foot18:hover{
+    .foot18:hover {
         background-color: white;
-        color: rgb(30,73,120) ;
-        border: 1px solid  rgb(30,73,120);
+        color: rgb(30, 73, 120);
+        border: 1px solid rgb(30, 73, 120);
     }
-    .foot7{
+
+    .foot7 {
         width: 100%;
     }
 
@@ -185,5 +190,30 @@
         font-size: 22px;
         margin-top: 18%;
         margin-top: 37%;
+    }
+
+    .footer4 {
+        margin-left: 37%;
+    }
+    .m1{
+        display: none !important;
+    }
+    .main3{
+     display: none !important;
+       
+    }
+     .maj1{
+        display: none ;
+     }
+     .maj2{
+        display: none ;
+     }
+
+     .navii3{
+        font-family:Kanit;
+        font-weight: 550;
+        font-size: 18px;
+        background-color: rgb(138,38,38);
+        margin-top: -0.5%;
     }
 }
