--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -6,7 +6,6 @@
 
     .head2 {
         display: none;
-
     }
 
     .head3 {
@@ -29,22 +28,24 @@
         margin-top: -0.5%;
     }
 
-    .main3 {
-        position: absolute;
-        top: 0;
-        margin-top: 20%;
-        margin-left: 10%;
+    .m1{
+        display: none !important;
     }
+    .main3{
+        display: none !important;
+    }
+
 
     .main4 {
         font-size: 20px;
         font-family: Young Serif;
+        line-height: 3;
     }
 
     .main5 {
         font-size: 25px;
         font-family: Young Serif;
-        margin-top: -8%;
+        margin-top: -6%;
     }
 
     .main6 {
@@ -91,7 +92,6 @@
 
     .head22 {
         margin-left: 27%;
-
     }
 
     .head33 {
@@ -106,15 +106,13 @@
 
     .main133 {
         font-family: Young Serif;
-     font-size: 38px;
-       
-        }
+        font-size: 38px;
+    }
 
     .main144 {
         font-family: Jost;
         font-size: 16px;
         margin-top: 2%;
-      
     }
 
     .main155 {
@@ -124,28 +122,38 @@
         width: 35%;
         height: 28px;
         font-size: 13px;
-        margin-left: 30%;    
+        margin-left: 30%;
     }
-    .main233{
+
+    .main233 {
         width: 50%;
         height: 250px;
         margin-left: 25%;
         margin-top: 6%;
     }
-    .m12{
-        background-color: rgb(246,246,246);
+
+    .m12 {
+        background-color: rgb(246, 246, 246);
         display: block;
     }
-    .m13{
-        background-color: rgb(142,180,203);
+
+    .m13 {
+        background-color: rgb(142, 180, 203);
         display: block;
     }
-    .main11{
+
+    .main11 {
         display: none;
     }
-    .navig1{
+
+    .navig1 {
         display: block;
     }
-   
-   
+    .maj1{
+        display: none ;
+     }
+     .maj2{
+        display: none ;
+     }
+
 }
