--- a/src/Tablet.css
+++ b/src/Tablet.css
@@ -4,7 +4,6 @@
         font-size: 28px;
         font-weight: 500;
         margin-left: 42%;
-
     }
 
     .head11 {
@@ -13,12 +12,10 @@
         font-weight: 500;
         margin-left: 32% !important;
         margin-top: 3%;
-
     }
 
     .head2 {
         margin-left: 18%;
-
     }
 
     .head33 {
@@ -26,27 +23,35 @@
         margin-top: -15% !important;
         margin-left: 70% !important;
     }
-
-    .main3 {
+    .maj2{
+        display: block !important;
         position: absolute;
         top: 0;
-        margin-top: 20%;
-        margin-left: 30% !important;
-
+        margin-top: 16%;
+        margin-left: 22%;
+    }
+    .maj1{
+        display: block !important; 
     }
 
+    /* .main3 {
+        position: absolute;
+        top: 0;
+        margin-top: 17%;
+        margin-left: 20%;
+    } */
+
     .main4 {
-        font-size: 30px;
+        font-size: 35px !important;
         font-family: Young Serif;
-
-
     }
 
     .main5 {
-        font-size: 35px;
+        font-size: 36px !important;
         font-family: Young Serif;
-        margin-top: -8%;
+        margin-top: -18% !important;
     }
+    
 
 
     .main7 {
@@ -107,7 +112,8 @@
     .m13 {
         display: none !important;
     }
-
+    
+   
 
 
 
