gallery & about page

--- a/src/new.css
+++ b/src/new.css
@@ -51,7 +51,7 @@
     font-family:Kanit;
     font-weight: 550;
     font-size: 24px;
-    background-color: rgb(138,38,38);
+    background-color: black;
     margin-top: -0.5%;
 }
 .main1{
