--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -24,7 +24,7 @@
         font-family: Kanit;
         font-weight: 500;
         font-size: 22px;
-        background-color: rgb(138, 38, 38);
+        background-color: black;
         margin-top: -0.5%;
     }
 
