--- a/src/Mobsm.css
+++ b/src/Mobsm.css
@@ -80,8 +80,8 @@
         font-family: Jost;
         color: white;
         background-color: rgb(30, 73, 120);
-        width: 50%;
-        height: 23px;
+        width: 48%;
+        height: 21px;
         margin-left: 23%;
         font-size: 15px;
     }
@@ -145,7 +145,7 @@
         font-family: Kanit;
         font-weight: 500;
         font-size: 20px;
-        background-color: rgb(138, 38, 38);
+        background-color: black;
         margin-top: -0.5%;
     }
     .footer1{
@@ -168,17 +168,18 @@
         font-size: 13px;
     }
     .ic1{
-       margin-left: 40%;
-       color: rgb(30,73,120);
+       margin-left: 43% !important;
+       color: black;
     }
     .ic2{
         margin-left: 60%;
-        color: rgb(30,73,120);  
+        color: black;  
      }
      .ic3{
         margin-left: 64%;
-        color: rgb(30,73,120);  
+        color: black;  
      }
+
      .foot7{
         width: 100%;
     }
@@ -206,11 +207,11 @@
     }
     .foot10{ 
         font-size: 28px;
-        color:rgb(30,73,120) ;
+        color:black;
     }
     .foot11{
         font-size: 28px;
-        color:rgb(30,73,120) ;  
+        color:black;  
     }
     .footer3{
         display: block;
