--- a/src/Tablet.css
+++ b/src/Tablet.css
@@ -59,7 +59,7 @@
         color: white;
         background-color: rgb(30, 73, 120);
         width: 50%;
-        height: 23px;
+        height: 21px !important;
         margin-left: 26%;
         font-size: 13px;
     }
@@ -111,6 +111,9 @@
 
     .m13 {
         display: none !important;
+    }
+    .navii3{
+        background-color: black !important;
     }
     
    
