--- a/src/Mobsm.css
+++ b/src/Mobsm.css
@@ -143,8 +143,8 @@
 
     .navii3 {
         font-family: Kanit;
-        font-weight: 500;
-        font-size: 20px;
+        font-weight: 400;
+        font-size: 17px !important;
         background-color: black;
         margin-top: -0.5%;
     }
