--- a/src/Blog_css/Blog.css
+++ b/src/Blog_css/Blog.css
@@ -14,6 +14,10 @@
 
 .navi3 {
     margin-top: 0%;
+
+}
+.navi313{
+display: none;
 }
 
 .navi4 {
@@ -199,6 +203,7 @@
 
 .ho1 {
     font-size: 19px;
+    display: flex;
 }
 
 .ho2 {
@@ -287,7 +292,8 @@
 }
 
 .foo8 {
-    margin-left: 1%;
+    margin-left: 2%;
+    font-size: 23px;
 }
 
 .b12 {
@@ -319,4 +325,13 @@
 .foo12 {
     font-size: 20px;
     color: white;
+}
+.blognav{
+    justify-content: start;
+}
+.hide52{
+    display: none;
+}
+.hide54{
+    display: block;
 }
