--- a/src/Mob.css
+++ b/src/Mob.css
@@ -217,4 +217,170 @@
         background-color: black;
         margin-top: -0.5%;
     }
+
+    
+    .shu1 {
+        display: none !important;
+    }
+
+    .off0 {
+        background-color: black;
+        position: absolute;
+        top: 0;
+        width: 100% !important;
+        display: block !important;
+    }
+
+    .off2 {
+        margin-top: 1.6%;
+    }
+
+    .off3 {
+        font-size: 20px;
+    }
+
+    .off4 {
+        font-size: 25px;
+        color: white;
+        margin-left: 0%;
+    }
+
+    .of9 {
+        /* width: 100%;
+        height: 320px; */
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        min-width: 100%;
+        min-height: 100%;
+        top: 50%;
+        left: 50%;
+        background-position: center;
+        object-fit: cover;
+        object-position: 50% 50%;
+        transform: translate3d(-50%, -50%, 0);
+    }
+
+    .off10 {
+        background-color: black;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        margin-top: 3.8%;
+        margin-left: 3%;
+
+    }
+
+    .off11 {
+        font-family: Dancing Script;
+        font-size: 27px;
+        margin-top: -22%;
+    }
+
+    .off12 {
+        margin-left: 20% !important;
+        margin-top: 2%;
+    }
+
+    .off13 {
+        margin-left: 10%;
+        font-size: 35px;
+        margin-top: 2%;
+        color: white;
+    }
+    .hom3 {
+        margin-bottom: -7%;
+        font-size: 35px;
+        font-weight: 300;
+    }
+
+    .hom4 {
+        margin-bottom: 4%;
+        font-size: 35px;
+        font-weight: 300;
+    }
+
+    .hom5 {
+        font-size: 14px;
+        font-weight: 300;
+    }
+
+    .hom2 {
+        position: absolute;
+        top: 0;
+        margin-top: 59%;
+        margin-left: 22%;
+    }
+
+    .off14 {
+        background-color: black;
+        margin-top: 130% ;
+        display: block !important;
+        position: absolute;
+        width: 104%;
+    }
+
+    .off15 {
+        font-size: 10px;
+    }
+
+    .hom10 {
+        margin-left: 5%;
+        font-size: 21px;
+        color: white;
+    }
+
+    .hommm10 {
+
+        font-size: 21px;
+        color: white;
+    }
+
+    
+    .off1 {
+        width: 90%;
+        border: none;
+    }
+
+    .off6 {
+        font-size: 17px;
+        font-weight: 350;
+    }
+
+    .off7 {
+        margin-left: 77%;
+    }
+
+    .off8 {
+        margin-left: 75%;
+    }
+
+    .off9 {
+        margin-left: 67%;
+    }
+
+    .off5 {
+        margin-left: 70%;
+    }
+
+    .mkk1{
+        /* position: absolute;
+        top: 0; */
+        background-color: black;
+        /* width: 100%; */
+        /* width: 95%; */
+        
+    }
+
+    .new24 {
+        margin-left: 20% ;
+        margin-top: 0.5% !important; 
+    }
+
+    .new25 {
+        margin-left: 10%;
+        font-size: 38px ;
+        margin-top: -1%;
+        color: white;
+    }
 }
