--- a/src/Mobsm.css
+++ b/src/Mobsm.css
@@ -41,25 +41,27 @@
         margin-top: 18%;
     }
 
-    .m1{
-        display: none !important;
-    }
-    .main3{
+    .m1 {
         display: none !important;
     }
 
-    .man1{
-        background-color: rgb(245,249,252);
+    .main3 {
+        display: none !important;
+    }
+
+    .man1 {
+        background-color: rgb(245, 249, 252);
         display: block !important;
     }
-    .main1{
+
+    .main1 {
         width: 60%;
         height: 300px;
         margin-left: 20%;
     }
 
     .main4 {
-        font-size: 40px !important ;
+        font-size: 40px !important;
         font-family: Young Serif;
         line-height: 3;
     }
@@ -110,7 +112,7 @@
     }
 
     .main133 {
-        font-family: Young Serif; 
+        font-family: Young Serif;
         font-size: 40px;
     }
 
@@ -148,84 +150,269 @@
         background-color: black;
         margin-top: -0.5%;
     }
-    .footer1{
+
+    .footer1 {
         display: none;
     }
-    .foot15{
+
+    .foot15 {
         font-family: Jost;
-        font-size: 16px; 
+        font-size: 16px;
         text-decoration: none;
         margin-left: 37%;
     }
-    .foot16{
+
+    .foot16 {
         font-family: Jost;
-        font-size: 16px; 
+        font-size: 16px;
         text-decoration: none;
-        margin-left: 44%;  
+        margin-left: 44%;
     }
-    .foot33{
+
+    .foot33 {
         font-family: Jost;
         font-size: 13px;
     }
-    .ic1{
-       margin-left: 43% !important;
-       color: black;
-    }
-    .ic2{
-        margin-left: 60%;
-        color: black;  
-     }
-     .ic3{
-        margin-left: 64%;
-        color: black;  
-     }
 
-     .foot7{
+    .ic1 {
+        margin-left: 43% !important;
+        color: black;
+    }
+
+    .ic2 {
+        margin-left: 60%;
+        color: black;
+    }
+
+    .ic3 {
+        margin-left: 64%;
+        color: black;
+    }
+
+    .foot7 {
         width: 100%;
     }
-    .foot8{
+
+    .foot8 {
         font-family: Jost;
         color: white;
-        background-color: rgb(30,73,120);
+        background-color: rgb(30, 73, 120);
         font-size: 15px;
     }
-    .foot18{
-        font-family: Jost; 
+
+    .foot18 {
+        font-family: Jost;
         color: white;
-        background-color: rgb(30,73,120);
+        background-color: rgb(30, 73, 120);
         font-size: 15px;
         height: 27px;
     }
 
-    .foot18:hover{
+    .foot18:hover {
         background-color: white;
-        color: rgb(30,73,120) ;
-        border: 1px solid  rgb(30,73,120);
+        color: rgb(30, 73, 120);
+        border: 1px solid rgb(30, 73, 120);
     }
-    .footer4{
+
+    .footer4 {
         margin-left: 37%;
     }
-    .foot10{ 
+
+    .foot10 {
         font-size: 28px;
-        color:black;
+        color: black;
     }
-    .foot11{
+
+    .foot11 {
         font-size: 28px;
-        color:black;  
+        color: black;
     }
-    .footer3{
+
+    .footer3 {
         display: block;
     }
-    .footer5{
+
+    .footer5 {
         display: block;
     }
-    .f11{
+
+    .f11 {
         display: block;
     }
-    .maj1{
-        display: none ;
-     }
-     .maj2{
-        display: none ;
-     }
+
+    .maj1 {
+        display: none;
+    }
+
+    .maj2 {
+        display: none;
+    }
+
+    .shu1 {
+        display: none !important;
+    }
+
+    .off0 {
+        background-color: black;
+        position: absolute;
+        top: 0;
+        width: 100% !important;
+        display: block !important;
+    }
+
+    .off2 {
+        margin-top: 1.6%;
+    }
+
+    .off3 {
+        font-size: 20px;
+    }
+
+    .off4 {
+        font-size: 25px;
+        color: white;
+        margin-left: 0%;
+    }
+
+    .of9 {
+        /* width: 100%;
+        height: 320px; */
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        min-width: 100%;
+        min-height: 100%;
+        top: 50%;
+        left: 50%;
+        background-position: center;
+        object-fit: cover;
+        object-position: 50% 50%;
+        transform: translate3d(-50%, -50%, 0);
+    }
+
+    .off10 {
+        background-color: black;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        margin-top: 3.8%;
+        margin-left: 3%;
+
+    }
+
+    .off11 {
+        font-family: Dancing Script;
+        font-size: 27px;
+        margin-top: -22%;
+    }
+
+    .off12 {
+        margin-left: 25%;
+        margin-top: 2%;
+    }
+
+    .off13 {
+        margin-left: 10%;
+        font-size: 40px;
+        margin-top: -1%;
+        color: white;
+    }
+    .hom3 {
+        margin-bottom: -7%;
+        font-size: 39px;
+        font-weight: 300;
+    }
+
+    .hom4 {
+        margin-bottom: 4%;
+        font-size: 39px;
+        font-weight: 300;
+    }
+
+    .hom5 {
+        font-size: 16px;
+        font-weight: 300;
+    }
+
+    .hom2 {
+        position: absolute;
+        top: 0;
+        margin-top: 49%;
+        margin-left: 25% !important;
+    }
+    .off14 {
+        background-color: black;
+        margin-top: 103% !important;
+        display: block !important;
+        position: absolute;
+        width: 103%;
+    }
+
+    .off15 {
+        font-size: 10px;
+    }
+
+    .hom10 {
+        margin-left: 5%;
+        font-size: 21px;
+        color: white;
+    }
+
+    .hommm10 {
+
+        font-size: 21px;
+        color: white;
+    }
+
+    
+    .off1 {
+        width: 90%;
+        border: none;
+    }
+
+    .off6 {
+        font-size: 17px;
+        font-weight: 350;
+    }
+
+    .off7 {
+        margin-left: 77%;
+    }
+
+    .off8 {
+        margin-left: 75%;
+    }
+
+    .off9 {
+        margin-left: 67%;
+    }
+
+    .off5 {
+        margin-left: 70%;
+    }
+
+    .mkk1{
+        /* position: absolute;
+        top: 0; */
+        background-color: black;
+        /* width: 100%; */
+        /* width: 95%; */
+        
+    }
+
+    .new24 {
+        margin-left: 20% ;
+        margin-top: 0.5% !important; 
+    }
+
+    .new25 {
+        margin-left: 10%;
+        font-size: 38px ;
+        margin-top: -1%;
+        color: white;
+    }
+
+
+
+
 }
