--- a/src/New_Home_css/New_Home.css
+++ b/src/New_Home_css/New_Home.css
@@ -5,6 +5,7 @@
 .new2 {
     position: absolute;
     top: 0;
+   
 
 
 
@@ -13,11 +14,14 @@
 
 .new4 {
     background-color: white;
-    width: 120%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    margin-top: 4%;
 }
 
 .new3 {
-    margin-left: 7%;
+    margin-left: 4%;
     margin-top: 2%;
 }
 
@@ -26,12 +30,12 @@
     background-color: white;
 }
 .new6{
-    margin-left: 18%;
+    margin-left: 8%;
     margin-top: 1%;
 }
 .new7{
     margin-left: 7%;
-    font-size: 38px;;
+    font-size: 36px;;
     color: white;
 }
 .new8{
@@ -42,7 +46,7 @@
 .new9{
     font-weight: 500;
     font-size: 23px;
-    margin-left: 5%;
+    /* margin-left: 5%; */
     margin-top: 1.3%;
 
 }
@@ -103,4 +107,13 @@
 .r1{
     display: none;
 }
+.aa1{
+    margin-left: 1%;
+    font-size: 12px;
+  }
+  .aa2{
+    margin-left: -1%;
+    font-size: 12px;
+  }
 
+  
