--- a/src/New_Home_css/New_Medium.css
+++ b/src/New_Home_css/New_Medium.css
@@ -102,5 +102,9 @@
         display: block;
         position: absolute;
     }
-
+    .hoom7 {
+        font-size: 12px !important;
+   
+    }
 }
+
