--- a/src/Mens_css/Mens.css
+++ b/src/Mens_css/Mens.css
@@ -216,7 +216,9 @@ label:active:after {
 }
 .tog1{
     width: 100%;
+    position: relative;
 }
+
 .tog2{
     font-size: 12px;
 }
@@ -306,3 +308,137 @@ margin-left: 7%;
 .port2:hover{
     text-decoration: underline;
 }
+
+.tog16{
+    width: 20px;
+    height: 20px;
+    background-color: rgb(245,245,220);
+    border-radius: 50%;
+    margin-top: -5%;
+    margin-left: 3%;
+}
+.tog17{
+    width: 20px;
+    height: 20px;
+    background-color: rgb(255,192,203);
+    border-radius: 50%;
+    margin-top: -5%;
+    margin-left: 3%;
+}
+
+.tog18{
+    width: 20px;
+    height: 20px;
+    background-color: rgb(178,34,34);
+    border-radius: 50%;
+    margin-top: -5%;
+    margin-left: 3%;
+}
+
+.stickk {
+    position: sticky;
+    top: 2rem;
+}
+.text1{
+    
+        position: relative;
+       
+        margin-top: 5%;
+    
+}
+.overlayy {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    
+   
+  }
+  .text1:hover .overlayy {
+    opacity: 0.6;
+  }
+  
+  .text2 {
+    /* color: white; */
+    font-size: 28px;
+    font-style: italic;
+    position: absolute;
+    top: 87%;
+    left: 86%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background-color: white ;
+  }
+  /* .text3{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: white;
+  } */
+  .text4{
+    margin-top: -30%;
+    margin-left: 14%;
+    color: black;
+  }
+  .text22 {
+    /* color: white; */
+    font-size: 28px;
+    font-style: italic;
+    position: absolute;
+    top: 87%;
+    left: 65%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background-color: white ;
+  }
+  .text44{
+    margin-top: -30%;
+    margin-left: 14%;
+    color: black;
+    font-weight: 300;
+  }
+  .textt2 {
+    /* color: white; */
+    font-size: 28px;
+    font-style: italic;
+    position: absolute;
+    top: 10%;
+    left: 88%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: white ;
+  }
+  .textt4{
+    margin-top: -60%;
+    margin-left: 18%;
+    color: black;
+    font-weight: 300;
+    font-size: 20px;
+  }
+  .trend1{
+    font-weight: 370;
+    font-size: 20px;
+  }
+  .hidd1{
+    display: none;
+  }
+  .bf{
+    display: none;
+  }
