--- a/src/Blog_css/Blog.css
+++ b/src/Blog_css/Blog.css
@@ -335,3 +335,14 @@ display: none;
 .hide54{
     display: block;
 }
+.blog_modal{
+    margin-left: 57%;
+}
+
+.blog_modal1{
+    font-size: 16px;
+}
+.blog_modal2{
+    font-size: 22px;
+    margin-left: 4%;
+}
