--- a/src/Brand_css/Brandv2_Tablet.css
+++ b/src/Brand_css/Brandv2_Tablet.css
@@ -1,11 +1,20 @@
 @media only screen and (max-width: 1023px) and (min-width: 768px){
 
 
-    .brand5 {
-        margin-top: 8%;
- 
-        width: 90%;
+    
+    .scroll-container {
+        width: 650px;
+        overflow-x: scroll; 
+        /* white-space: nowrap; */
     }
+    .content {
+        margin-top: 8%;
+        width: 800px; 
+        /* margin-left: 10%; */
+    }
+
+
+
 
 
 
