--- a/src/Error_css/Error.css
+++ b/src/Error_css/Error.css
@@ -24,3 +24,50 @@ font-weight: 350;
     color: white;
     
 }
+
+@media only screen and (max-width: 1023px) and (min-width: 768px){
+
+    .error4{
+        width: 100px;
+        height: 27px;
+        border: 1px solid black;
+       margin-left: 43%;
+       font-size: 15px;
+    }
+
+}
+
+@media only screen and (max-width: 766px) and (min-width: 425px) {
+    .error4{
+        width: 100px;
+        height: 27px;
+        border: 1px solid black;
+       margin-left: 38%;
+       font-size: 15px;
+    }
+
+}
+
+@media only screen and (max-width: 423px) and (min-width: 375px){
+
+    .error4{
+        width: 100px;
+        height: 27px;
+        border: 1px solid black;
+       margin-left: 36%;
+       font-size: 15px;
+    }
+
+
+}
+
+@media only screen and (max-width: 374px) and (min-width: 320px){
+    .error4{
+        width: 100px;
+        height: 27px;
+        border: 1px solid black;
+       margin-left: 34%;
+       font-size: 15px;
+    }
+
+}
