--- a/src/New_Brand_css/New_Brand.css
+++ b/src/New_Brand_css/New_Brand.css
@@ -19,3 +19,42 @@
     margin-top: 8%;
     margin-left: 6%;
 }
+
+.nw1{
+    display: none;
+}
+
+@media only screen and (max-width: 1023px) and (min-width: 768px){
+
+    
+
+}
+
+@media only screen and (max-width: 766px) and (min-width: 425px){
+    .nw1{
+        display: block;
+    } 
+    .nw2{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 423px) and (min-width: 375px){
+    .nw1{
+        display: block;
+    } 
+    .nw2{
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 374px) and (min-width: 320px){
+    .nw1{
+        display: block;
+    } 
+    .nw2{
+        display: none;
+    }
+
+}
